CARGO-1535: If the START_JVMARGS has memory-related settings, remove them from the JVMARGS